--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # Environment variables for P2P Energy Trading React App (Vite)
 
 # Backend API URL - change this to your backend server address
+# VITE_API_URL=https://api.p2p-energy-trading.sekgus.site/api/v1
 VITE_API_URL=http://localhost:3000/api/v1
 
 # App Name  
-VITE_APP_NAME=EnerLink
+VITE_APP_NAME=EnerchainX
 
 # Environment
 VITE_APP_ENV=development
