--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@
 # VITE_API_URL=https://api.p2p-energy-trading.sekgus.site/api/v1
 VITE_API_URL=http://localhost:3000/api/v1
 
+# Blockchain Explorer URL - change this to your blockchain explorer address
+VITE_BLOCKCHAIN_EXPLORER_URL=https://explorer.p2p-energy-trading.sekgus.site
+
 # App Name  
 VITE_APP_NAME=EnerchainX
 
 # Environment
-VITE_APP_ENV=development
+VITE_APP_ENV=production
